add a bunch of changes

--- a/index.css
+++ b/index.css
@@ -210,3 +210,25 @@ pre.overlay-inner {
   border: 15px solid;
   border-color: #fff transparent transparent #fff;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  hyphens: none !important; /* yolo */
+}
+
+.reveal .short-list ul {
+  list-style: none;
+}
+
+.reveal .short-list li {
+  line-height: 1.3em;
+}
+
+.reveal table.pretty-table {
+  margin: 0 auto;
+}
+
+.reveal .pretty-table td {
+  margin-left: 5px;
+  margin-right: 5px;
+  padding-bottom: 0.2em;
+}
